# tdb-community

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/testing/: manual_testing.md
src/tdb/: __init__.py  config.py  main.py
src/tdb/audit/: logger.py
src/tdb/auth/: apikey.py
src/tdb/cli/: client.py  main.py
src/tdb/connectors/: base.py  csv.py
src/tdb/engine/: validator.py
src/tdb/models/: __init__.py  source.py
src/tdb/registry/: migrations.py  store.py
src/tdb/routers/: mcp.py  query.py  sources.py
tests/: conftest.py  test_api_auth_query.py  test_persistence_mcp.py
tests/unit/: test_validator.py
