[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdb-community"
version = "0.4.1"
description = "The Data-Bridge — Turn any data source into a queryable API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["data", "api", "sql", "bridge", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "duckdb>=1.1.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "typer>=0.12.0",
    "rich>=13.8.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
]

[project.scripts]
tdb = "tdb.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tdb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"
